Fixing som font issues and adding particles (#171)